# auralbit

./: .clang-format  .gitignore  CMakeLists.txt  README.md  THIRD_PARTY.md
resources/: auralbit.desktop  theme.qss
src/: CMakeLists.txt  cli_main.cpp  main.cpp
src/audio/: AudioOutput.cpp  AudioOutput.h  Decoder.cpp  Decoder.h  Player.cpp  Player.h  RingBuffer.h
src/audio/decoders/: FlacDecoder.cpp  FlacDecoder.h  Mp3Decoder.cpp  Mp3Decoder.h  VorbisDecoder.cpp  VorbisDecoder.h  WavDecoder.cpp  WavDecoder.h
src/desktop/: MprisAdapter.cpp  MprisAdapter.h
src/sync/: MountedFsTarget.cpp  MountedFsTarget.h  MtpTarget.cpp  MtpTarget.h  PlaylistSyncer.cpp  PlaylistSyncer.h  SyncTarget.h
src/ui/: LibraryModel.cpp  LibraryModel.h  LibraryTree.cpp  LibraryTree.h  MainWindow.cpp  MainWindow.h  NowPlayingStrip.cpp  NowPlayingStrip.h  PlaylistsModel.cpp  PlaylistsModel.h  SyncDialog.cpp  SyncDialog.h  TransportBar.cpp  TransportBar.h
src/visualizer/: Visualizer.cpp  Visualizer.h
